finished analysis and added some help scripts

--- a/Lindner_FinalAssignment.Rmd
+++ b/Lindner_FinalAssignment.Rmd
@@ -18,9 +18,20 @@ We know about the climate change and it's consequences since many years and a lo
 
 ## Introduction
 
-Since Charles David Keeling presented his findings of an increase in the concentration of carbon dioxide in Earth's atmosphere people started believing in a human influenced climate change (Keeling Quelle). Before that it was known that there is a natural variability in the Earth's climate with changes into both extremes, cold and warm, over the last 800.000 years (variablity quelle). Based on Keelings data and other climatic investigations it became clear that the current global warming is strongly human-induced. With that knowledge many started investigating the impact of the climate change on natural and human environment. Above all the IPCC, the International Panel on Climate Change, provides information about the human-induced climate change, the risks and consequences of it and the possibilities of a climate mitigation (IPCC Website). The summarized findings of their researcher groups show that there is a remarkable rise of temperature and a lot of signficant changes in physical and biological systems in all parts of the earth (Paper 2007). They also show how the human is involved in this by producing greenhouse gases and strengthen the climate change (IPCC paper). To show how the climate change effects some of the most important climate elements: air temperature, precipitation, wind speed and evaporation 
+Since Charles David Keeling presented his findings of an increase in the concentration of carbon dioxide in Earth's atmosphere people started believing in a human influenced climate change (Keeling Quelle). Before that it was known that there is a natural variability in the Earth's climate with changes into both extremes, cold and warm, over the last 800.000 years (variablity quelle). Based on Keelings data and other climatic investigations it became clear that the current global warming is strongly human-induced. With that knowledge many started investigating the impact of the climate change on natural and human environment. Above all the IPCC, the International Panel on Climate Change, provides information about the human-induced climate change, the risks and consequences of it and the possibilities of a climate mitigation (IPCC Website). The summarized findings of their researcher groups show that there is a remarkable rise of temperature and a lot of signficant changes in physical and biological systems in all parts of the earth (Paper 2007). They also show how the human is involved in this by producing greenhouse gases and strengthen the climate change (IPCC paper). To show how the climate change influences some of the most important climate elements: air temperature, precipitation, wind speed and evaporation, this paper investigates data gathered from weather stations all over Texas. Texas was chosen because it is a very large state (696,241 km2), is climatically interesting (containing three climate zones) and has a lot of easy accessible data (Almanac website). On top of that, Texas emits the most greenhouse gases of all states in the United States which makes it interesting to see the direct consequences of that(Dallas News). In addition to the book "The impact of global warming on Texas", by Schmandt et al. this paper takes a deeper look into data from single stations. In their work they gave an overview for the whole state regarding different climatic, biological and political factors and were able to show an remarkable climate change for precipitation and temperature (Buch Zitat). In this work the focus lies on the different stations with a conclusion on the whole state. Additionally, it will be checked if there are differences between the climate change at the coast and at the interior and a forecast for the next years will be given.
+This work starts by giving an introduction to the used data and how that was gathered. After that the methods will be described which were used to analyse the data. This is followed by a presentation of the results and a discussion of the findings. It will be closed by a conclusion with an outlook to further research.
 
 ## Data
+
+Two different types of data are used for the analysis:
+* Time series data of four stations in Texas over the past 70 years
+* Single day data of all stations in Texas at the first of January and August every ten years
+The datasets involve the location of the station, the name and identifier of the station, the date of the observation and the measured value. Like stated in the introduction, the four daily measured climate elements are:
+* Maximum air temperature
+* Total precipitation
+* Average wind speed
+* Totale vaporation from an evaporation pan
+The four stations with the time series data were chosen to represent different parts of Texas (figure 1). To test if there are differences between the coastal regions and the interior one station for the four cardinal directions North, East, South and West were chosen. Since these stations have not measured the average wind speed, here the total wind movement was used for the analysis. The temporal amount of the time series reaches from 1950 until today. Not every series of data from the four stations covers the whole extent but these are the best fitting stations in sense of location and data coverage for this analysis. Missing data for single days is interploated or left out if longer periods are missing. 
 
 ## Methods
 
